# project-chimera

./: .cursorrules.md  Dockerfile  Makefile  README.md  copilot-instructions.md  pyproject.toml
.github/workflows/: main.yml
logs/: agent_thinking.md
research/: architecture_strategy.md  research_notes.md  tooling_strategy.md
skills/: README.md
specs/: SOUL.md  _meta.md  functional.md  technical.md
tests/: test_skills_interface.py  test_trend_fetcher.py
